Fix: Horizontal Scroll

--- a/src/components/Timeline/timeline.css
+++ b/src/components/Timeline/timeline.css
@@ -363,6 +363,5 @@
 
   .circularAnimation2{
 	position: relative;
-	left:50%;
   }
 
